Syntax error fixes